<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PMSCS ADMISSION</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_registraion">Click To Apply</string>
    <string name="button_admit_print">Payment Clearance Check </string>
    <string name="button_how_to_apply">How To Apply</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="text_view_text"><B><I>The Personal Details Form</I></B></string>

    <string-array name="nav_drawer_item">
        <item>Home</item>
        <item>Achievement Of JU CSE</item>
        <item>PMSCS</item>
        <item>FAQ</item>
        <item>Beautiful Places</item>
        <item>About Us!</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/cse_ju</item>
        <item>@drawable/pmscs</item>
        <item>@drawable/faq_ico</item>
        <item>@drawable/beautiful_places</item>
        <item>@drawable/about_us</item>
    </array>

    <string name="applicant_name">Applicant Name ......</string>
    <string name="fathers_name">Fathers Name.....</string>
    <string name="mothers_name">Mothers Name......</string>
    <string name="nationality">Nationality......</string>
    <string name="email">Email......\n example@somthing.com</string>
    <string name="date_of_birth">Date Of Birth....\n DD-MM-YY</string>
    <string name="contact_number">Contact Number\n (e.g 017600000000)</string>
    <string name="present_address">Present Address</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="present_status">Present Status And Organization</string>
    <string name="present_experience">Present Experience</string>
    <string name="btn_submit">Submit</string>
    <!-- Table Name -->
    <string name="degree">Degree</string>
    <string name="exam">Exam</string>
    <string name="group">Group</string>
    <string name="board">Board</string>
    <string name="gpa">CGPA</string>
    <string name="year">Years</string>
    <string name="academic_details">Academic Details</string>
    <string name="pmscs"><b>Degree:\n<font fgcolor="red"> Master of Science in Computer Science</font></b></string>
    <string name="cseju">The study of computer programming itself investigates various aspects of the use of programming languages and complex systems, and human-computer interaction focuses on the challenges in making computers and computations useful, usable, and universally accessible to humans.</string>
    <string name="historyju">For any kind of query or any questions please call the number below.\n<b><font fgcolor="red">01941336337</font></b> \n Or come to the office within 2 pm all along the week</string>
    <string name="download">Download PDF</string>
    <string name="str_btn_start">Start SlideShow</string>
    <string name="str_btn_stop">Stop SlideShow</string>

    <string-array name="sex_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="blood_group">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <string name="spinner_sex_prompt">Select Your Gender </string>
    <string name="spinner_blood_group">Select Your Blood Group </string>
    <string name="text"><b><font fgcolor="red"> Option 1: Online Application</font></b>\n<font fgcolor="blue">Step1:</font><font fgcolor="black"> Make a payment of Tk 1000/- as application  processing fee from your/agent’s Dutch Bangla Mobile Banking Account to CSE, JU biller code 345.</font>\n <font fgcolor="blue"><b>The process is as follows:</b></font>\n<i><font fgcolor="black">Using your/agent’s Dutch Bangla Mobile Banking Account, dial *322#</font></i>\n<i><font fgcolor="black">From the menu appeared, select 1 for Payment</font></i>\n<i><font fgcolor="black">Enter 345 as Biller ID,</font></i>\n<i><font fgcolor="black">Enter your mobile no. as Bill Number</font></i>\n<i><font fgcolor="black">Enter 1000 as Amount</font></i>\n<i><font fgcolor="black">Enter your/agent’s mobile banking PIN</font></i>\n<i><font fgcolor="black">Collect Txnid (TRANSACTION ID) from the return SMS</font></i>\n<b><font fgcolor="blue">Go to step 2 after 24 hours.</font></b>\n<font fgcolor="blue">Step2:</font><font fgcolor="black"> Complete your Registration. Follow the link (After successful registration you will be provided your user name and password through email [check your spam])</font>\n<font fgcolor="blue">Step3:</font><font fgcolor="black"> Login using user name and password.</font>\n<font fgcolor="blue">Step4:</font><font fgcolor="black"> Enter your mobile number and Transaction ID(Txnid)]</font>\n<font fgcolor="blue">Step5:</font><font fgcolor="black"> Download your admit card.</font>\n<b><font fgcolor="red">Option 2:  Offline Application</font></b>\n<font fgcolor="black">Prescribed application form and admission brochure can be collected from the departmental office or can be downloaded from <b><i><a href="https://www.juniv.edu/cse/emcs"><font fgcolor="blue">www.juniv.edu/cse/emcs</font></a></i></b>.\n Filled application form along with attested copies of all certificates/mark sheets, two passport size photographs and an amount of BDT 800/- (in cash) should be submitted to the departmental office during the office hour between 9:00 am to 4:30 pm.</font></string>
    <string name="admit_card_news"><b><font fgcolor="red">Your payment is clear!</font></b>\n\n <b>Please Visit This Website To Print Your Admitcard</b>\n<a href="http://juniv.edu/cseju/emcs/login.php">http://juniv.edu/cseju/emcs/login.php</a>\n\n<i><font fgcolor="blue">Use your mail and pasword to login ! </font></i></string>
    <string name="achievement_one">Stood First In ACM ICPC Bangladesh region, whre another 2 team also within 10 in 2015</string>
    <string name="achievement_two">Stood First In ACM ICPCE Bangladesh Region in 2014</string>
    <string name="achievement_three">Two Times World Finalist In ACM ICPC </string>

</resources>