<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_view_style"
            android:gravity="center"
            android:text="@string/achievement_one" />

        <TextView
            android:id="@+id/textView1"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_view_style"
            android:gravity="center"
            android:text="@string/achievement_two" />

        <TextView
            android:id="@+id/textView1"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_view_style"
            android:gravity="center"
            android:text="@string/achievement_three" />
    </LinearLayout>

</ScrollView>